<!--
  ~ Copyright 2016 Manuel Rebollo Báez.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Lotería de navidad 2016</string>
    <string name="action_feedback">Ayudanos a mejorar</string>
    <string name="save">Guardar</string>
    <string name="sort_by_label">Ordenar por nombre</string>
    <string name="sort_by_number">Ordenar por número</string>
    <string name="about">Sobre nosotros</string>
    <string name="title_activity_lottery_ticket_form">Formulario</string>

    <string name="label">Etiqueta</string>
    <string name="number">Número</string>
    <string name="bet">Jugado</string>

    <string name="sample_label">Mi número</string>
    <string name="sample_number">00000</string>
    <string name="sample_bet">20 €</string>
    <string name="sample_prize">0 €</string>

    <string name="money_format">%1$.2f €</string>
    <string name="number_format">%1$05d</string>

    <string name="total_bet">Jugado: %1$.2f €</string>
    <string name="total_win">Ganado: %1$.2f €</string>
    <string name="profit">Beneficios: %1$.2f €</string>
    <string name="void_text">--</string>

    <string name="about_text">ATENCIÓN:\nLos resultados obtenidos por esta aplicación son meramente informativos y no vinculantes. Es posible que puedan aparecer errores en los resultados. Ante esta situación, tanto el desarrollador como el proveedor de datos (El País) no se hacen responsables de los perjuicios que puedan causar estos errores.\n\nEs altamente recomendable confirmar los resultados mediante las listas oficiales del sorteo una vez haya concluido el mismo.</string>

    <string name="christmas_lottery">Lotería de navidad</string>
    <string name="child_lottery">Lotería del niño</string>

    <string-array name="draws">
        <item>Todos los sorteos</item>
        <item>Lotería de navidad</item>
        <item>Lotería del niño</item>
    </string-array>

    <string name="last_update">Actualizado: %s</string>

    <string name="the_draw_has_not_begun">El sorteo no ha comenzado</string>
    <string name="the_draw_has_begun">El sorteo ha empezado</string>
    <string name="the_draw_is_over">El sorteo ha terminado</string>

    <string name="title_activity_about">Sobre nosotros</string>
    <string name="action_settings">Settings</string>

    <!-- Errors -->
    <string name="error_field_required">Campo requerido</string>
    <string name="error_get_lottery_tickets">Error al obtener los números</string>
    <string name="error_delete_lottery_ticket">Error al eliminar el número</string>
    <string name="error_sort_lottery_tickets">Error al ordenar los números</string>
    <string name="error_update_prizes">Error al actualizar los resultados</string>
    <string name="error_create_lottery_ticket">Error al crear el número</string>
    <string name="error_update_lottery_ticket">Error al actualizar el número</string>
    <string name="error_no_numbers">No hay números que comprobar</string>
    <string name="done">Done</string>

    <string name="database_name">loteriadenavidad.realm</string>
    <string name="delete">delete</string>

    <string name="update_user">Update username</string>
</resources>
