<!--
  ~ Copyright 2016 Manuel Rebollo Báez.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".app.view.main.MainActivity">

    <item
        android:id="@+id/action_sort_by_label"
        android:orderInCategory="100"
        android:title="@string/sort_by_label"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_sort_by_number"
        android:orderInCategory="101"
        android:title="@string/sort_by_number"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="102"
        android:title="@string/action_feedback"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="103"
        android:title="@string/about"
        app:showAsAction="never"/>
</menu>
