<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Manuel Rebollo Báez.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="4dp"
    android:foreground="?selectableItemBackground"
    app:cardCornerRadius="4dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/labelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/sample_label"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/numberTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/sample_number"
                android:textSize="@dimen/text_size_medium" />

            <TextView
                android:id="@+id/betTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/sample_bet"
                android:textSize="@dimen/text_size_medium" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical">

            <TextView
                android:id="@+id/prizeTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:maxLines="1"
                android:text="@string/sample_prize"
                android:textSize="@dimen/text_size_title" />
        </LinearLayout>
    </FrameLayout>
</android.support.v7.widget.CardView>