<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2016 Manuel Rebollo Báez.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.mrebollob.loteriadenavidad.presentation.view.form.FormActivity">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:id="@+id/formView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/spacing_normal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/labelEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label"
                android:inputType="textCapSentences"
                android:maxLength="19"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/font_normal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/numberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/font_normal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/betEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/bet"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/font_normal" />
        </android.support.design.widget.TextInputLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:background="@color/primary_dark"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="5">

            <RadioButton
                android:id="@+id/itemRedColor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/red"
                android:buttonTint="@android:color/black" />

            <RadioButton
                android:id="@+id/itemBlueColor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/blue"
                android:buttonTint="@android:color/black" />

            <RadioButton
                android:id="@+id/itemGreenColor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/green"
                android:buttonTint="@android:color/black" />

            <RadioButton
                android:id="@+id/itemWhiteColor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:buttonTint="@android:color/black" />

            <RadioButton
                android:id="@+id/itemYellowColor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/yellow"
                android:buttonTint="@android:color/black" />

        </RadioGroup>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>